a1/brendan_gordon/TEST_PROGRAMS/invalidtype/stefan_knudsen/floatCond2.min
if 1.0 then
print "float";
else
print "int";
endif
